# reachy-mini-server

./: README.md  pyproject.toml  requirements.txt
app/: main.py
files/: context.txt
tests/: test_read_file.py
