[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy-mini-server"
version = "0.1.0"
description = "Small FastAPI app that returns text file contents as JSON"
requires-python = ">=3.8"
dependencies = [
  "fastapi==0.103.1",
  "uvicorn[standard]==0.23.2",
]
